Changes to Github Pages

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Step Style</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./PI - Stepstyle/style/style.css" />
-</head>
+  <link rel="stylesheet" href="./src/style.css" />
+</head> 
 
 <body>
   <header class="site-header">
@@ -21,7 +21,7 @@
       </nav>
       <div class="icons">
         <button class="icon-btn">🔍</button>
-        <button onclick="window.location.href='./PI - Stepstyle/login.html'">🛒</button>
+        <button onclick="window.location.href='./src/login.html'">🛒</button>
       </div>
     </div>
   </header>
@@ -47,8 +47,8 @@
 
       <div class="cats-grid">
         <article class="cat-card">
-          <img src="./PI - Stepstyle/src/assets/images/Camisa_adidas.webp" alt="Camisa" />
-          <button onclick="window.location.href='./PI - Stepstyle/segundo.html'">
+          <img src="./src/assets/images/Camisa_adidas.webp" alt="Camisa" />
+          <button onclick="window.location.href='./src/segundo.html'">
     <div class="cat-info">
     <h3>Camisa</h3>
     <p>Camisas de manga longa, curta e muito mais</p>
@@ -57,7 +57,7 @@
         </article>
 
         <article class="cat-card">
-          <img src="./PI - Stepstyle/src/assets/images/Blusa_Lacoste.webp" alt="Blusas" />
+          <img src="./src/assets/images/Blusa_Lacoste.webp" alt="Blusas" />
           <div class="cat-info">
             <h3>Blusas</h3>
             <p>Para inverno ou apenas pelo estilo</p>
@@ -65,7 +65,7 @@
         </article>
 
         <article class="cat-card">
-          <img src="./PI - Stepstyle/src/assets/images/Joias.avif" alt="Joias" />
+          <img src="./src/assets/images/Joias.avif" alt="Joias" />
           <div class="cat-info">
             <h3>Joias</h3>
             <p>Brincos, colares e pulseiras</p>
@@ -73,7 +73,7 @@
         </article>
 
         <article class="cat-card">
-          <img src="./PI - Stepstyle/src/assets/images/Tenis_jordan.jpg" alt="Botas" />
+          <img src="./src/assets/images/Tenis_jordan.jpg" alt="Botas" />
           <div class="cat-info">
             <h3>Tenis</h3>
             <p>Estilos Streetwear</p>
@@ -139,6 +139,6 @@
     </div>
   </footer>
 
-  <script src="./PI - Stepstyle/script.js"></script>
+  <script src="./src/script.js"></script>
 </body>
 </html>
